--- a/table.css
+++ b/table.css
@@ -3,7 +3,7 @@
     width: 80%;
     min-width: 350px;
     max-height: 40%;
-    background-color: rgba(39, 48, 54, 0.75);
+    background-color: rgba(25, 113, 164, 0.75);
     padding-bottom: 25px;
     margin: 0 auto;
     text-align: center;
@@ -16,7 +16,7 @@
     text-align: center;
     border-bottom: 2px solid #ecf0f1;
     border-collapse: collapse;
-    background-color: #273036;
+    background-color: #1971a4;
     color: #ecf0f1;
 }
 
@@ -26,7 +26,7 @@
     max-height: 40%;
     overflow: scroll;
     scrollbar-width: thin;
-    background-color: #273036;
+    background-color: #1971a4;
     padding: 20px 0;
     margin: 0 auto;
 }
