--- a/main.css
+++ b/main.css
@@ -27,7 +27,7 @@ input[type=number] {
   font-size: large;
   padding: 7px 14px;
   border: 2px solid #ecf0f1;
-  background-color: #273036;
+  background-color: #1971a4;
   border-radius: 10px;
   color: #ecf0f1;
 }
@@ -35,5 +35,5 @@ input[type=number] {
 .calculator-btn:hover{
   border: 2px solid #dcdde1;
   background-color: #ecf0f1;
-  color: #273036;
+  color: #1971a4;
 }
