--- a/main.css
+++ b/main.css
@@ -10,6 +10,7 @@ body{
   background-position:center;
   background-size: cover;
   font-family: 'PT Sans', sans-serif;
+  padding-bottom: 50px;
 }
 
 input::-webkit-outer-spin-button,
